[package]
name = "liberty-parse"
description = "Liberty file format parser"
version = "0.3.0"
authors = ["Erik Ronshagen <eronshagen@gmail.com>"]
edition = "2018"
repository = "https://github.com/shages/liberty-parse"
readme = "README.md"
license = "MIT"

[badges]
azure-devops = { project = "eronshagen/shages", pipeline = "shages.liberty-parse" }

[dependencies]
nom = "5.0"
itertools = "0.8"
gpoint = "0.2.1"
indexmap = "1.9.2"

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "bench"
harness = false
